--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "morgan": "^1.10.0",
     "nodeman": "^1.1.2",
     "nodemon": "^3.1.0",
+    "react-dom": "^18.3.1",
+    "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   }
